# kirin

./: README.md
.github/workflows/: format-converter-gui.yml
apps/format-converter-gui/: .gitignore  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  format_converter.spec  pyproject.toml
apps/format-converter-gui/scripts/: build.ps1  fetch_tools.ps1  validate.ps1
apps/format-converter-gui/src/format_converter_gui/: __init__.py  converter_audio.py  converter_base.py  converter_document.py  converter_image.py  converter_tab.py  converter_video.py  main.py  main_window.py  settings_dialog.py  utils.py
