[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "format-converter-gui"
version = "1.0.0"
description = "A Windows GUI application for converting images, videos, audio, and documents"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "pyinstaller>=5.13.0",
]

[project.scripts]
format-converter-gui = "format_converter_gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]
